# Inf2C-Computer-Systems-Coursework-2-MIPS-Processor-Simulator

./: README.md
cw2/: CMakeLists.txt  memfile-complex.txt  memfile-simple.txt  memory_hierarchy.c  mipssim  mipssim.c  regfile.txt
cw2/include/: mipssim.h  parser.h
cw2/mipssim.dSYM/Contents/: Info.plist
cw2/mipssim.dSYM/Contents/Resources/DWARF/: mipssim
