https://powcoder.com
代写代考加微信 powcoder
Assignment Project Exam Help
Add WeChat powcoder
https://powcoder.com
代写代考加微信 powcoder
Assignment Project Exam Help
Add WeChat powcoder
cmake_minimum_required(VERSION 3.17)
project(cw2 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)

add_executable(cw2
        include/mipssim.h
        include/parser.h
        memory_hierarchy.c
        mipssim.c)
